--- a/public/css/panel-control.css
+++ b/public/css/panel-control.css
@@ -38,23 +38,33 @@
         height: 100%;   
         flex-grow: 1;
     }
+     
         .header-menu ul{
             list-style: none;
             display: flex;
             flex-flow: row nowrap;
         }
+            .header-menu ul li a.header-menu-selected{
+                text-decoration: none;
+                color: #ffffff;;
+                font-size: 1.1rem;
+                font-weight: regular;
+                background-color: var(--primary-color);
+                padding: 10px;
+            }
             .header-menu ul li a{
                 text-decoration: none;
                 color: var(--primary-color);
                 font-size: 1.1rem;
                 font-weight: regular;
-                background-color: rgb(255, 255, 255);
+                background-color: white;
                 padding: 10px;
             }
             .header-menu ul li a:hover{
                 background-color: var(--primary-color);
                 color: #ffffff;
             }
+            
     .header-usuario{
         display: flex;
         flex-direction: column;
@@ -121,109 +131,7 @@
             border: 1px solid #ccc;
             border-radius: 4px;
         }   
-        .content-menu-variables{
-            display: flex;
-            flex-flow: row nowrap;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            justify-content: center;
-            gap: 10px;
-            margin-bottom: 20px;
-            
-        }
-            .content-menu-variables ul{
-                list-style: none;
-                display: flex;
-                flex-flow: row nowrap;
-                gap: 10px;
-            }
-                .content-menu-variables ul li a{
-                    text-decoration: none;
-                    color: var(--tertiary-color);
-                    font-size: 1rem;
-                    font-weight: regular;
-                    background-color: rgb(255, 255, 255);
-                    padding: 8px;
-                }
-                .content-menu-variables ul li a:hover{
-                    background-color: var(--tertiary-color);
-                    color: #ffffff;
-                }
-        .select-content-periodo{
-            display: flex;
-            justify-content: center;
-            font-size: 1rem;
-            color: black;
-            margin-bottom: 20px;
-            font-weight: regular;
-        }
-            .select-periodo {
-                padding: 6px;
-                font-size: 1rem;
-                border: 1px solid #ccc;
-                border-radius: 4px;
-            }
-
-    .content-input{
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: center;
-        gap: 10px;
-        margin-bottom: 20px;
-        padding: 20px;
-        background-color: white;
-    }
-        .input-usuarios{
-            display: flex;
-            flex-flow: column nowrap;
-            padding: 6px;
-            font-size: 1rem;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            width: auto;
-            padding: 20px;
-            gap: 5px;
-            background-color: white;
-            color: black;
-        }
-            .input-usuarios label{
-                font-size: 1rem;
-                font-weight: bold;
-            }
-            .input-usuarios input{
-                padding: 6px;
-                font-size: 1rem;
-                border: 1px solid #ccc;
-                border-radius: 4px;
-                margin-bottom: 15px;
-            }
-            .input-usuarios-title{
-                display: flex;
-                flex-direction: row;
-                justify-content: center;
-                margin-bottom: 20px;
-            }
-            .input-usuarios h2{
-                font-size: 1.2rem;
-                color: var(--secondary-color);
-                text-decoration: none;
-            }
-                
-            .btn-guardar{
-                width: auto;
-                padding: 10px;
-                border: none;
-                border-radius: 5px;
-                background-color: var(--secondary-color);
-                color: white;
-                cursor: pointer;
-                font-size: 1rem;
-            }
-                .btn-guardar:hover{
-                    background-color: #d8d8d8;
-                    color:var(--tertiary-color);
-                }
+        
 
 .content-indicador {
     display: flex;  
@@ -260,3 +168,33 @@
             padding: 10px;
             background-color: red;
         }
+
+        .content-menu-variables{
+            display: flex;
+            flex-flow: row nowrap;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            justify-content: center;
+            gap: 10px;
+            margin-bottom: 20px;
+            
+        }
+            .content-menu-variables a{
+                text-decoration: none;
+                color: var(--primary-color);
+                font-size: 1.1rem;
+                font-weight: regular;
+                background-color: rgb(255, 255, 255);
+                padding: 10px;
+            }
+            .content-menu-variables a:hover{
+                color: var(--secondary-color);
+            }
+            .menu-variable-item{
+                list-style: none;
+                display: flex;
+                flex-flow: column nowrap;
+                align-items: center;
+                justify-content: center;
+            }
