--- a/src/views/ingreso_datos_4.html
+++ b/src/views/ingreso_datos_4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usuarios</title>
+    <title>Agua facturada</title>
     <link rel="stylesheet" href="../../public/css/ingreso_datos.css">
 </head>
     <body>
@@ -44,10 +44,10 @@
              </div>
              <div class="content-menu-variables">
                 <ul>
-                    <li><a href="#" class="variable-selected">Usuarios</a></li>
-                    <li><a href="#">PQR</a></li>
-                    <li><a href="#">Agua producida</a></li>
-                    <li><a href="#">Agua facturada</a></li>
+                    <li><a href="#">Usuarios</a></li>
+                    <li><a href="#" >PQR</a></li>
+                    <li><a href="#" >Agua producida</a></li>
+                    <li><a href="#" class="variable-selected">Agua facturada</a></li>
                     <li><a href="#">Caudal concesionado</a></li>
                     <li><a href="#">Volumen vertido</a></li>
                     <li><a href="#">Financiero</a></li>
@@ -74,15 +74,10 @@
              <div class="content-input">
                 <div class="input-usuarios">
                     <div class="input-usuarios-title">
-                        <h2>USUARIOS</h2>
+                        <h2>AGUA FACTURADA</h2>
                     </div>
-                    
-                    <a>Usuarios Acueducto:</a>
-                    <input type="text" placeholder="Digita usuarios">
-                    <a>Usuarios Alcantarillado:</a>
-                    <input type="text" placeholder="Digita usuarios">
-                    <a>Total viviendas:</a>
-                    <input type="text" placeholder="Digita numero de viviendas">
+                    <a>M3 facturados:</a>
+                    <input type="text" placeholder="-">
                     <button class="btn btn-guardar">Guardar</button>
                 </div>
              </div>
