--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SERVIN NET</title>
-    <link rel="stylesheet" href="../../public/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <div class="container">
         <section class="container-logo">
-            <img src="../../public/Images/Servin Net Logo_Principal.png" class="logo_principal" alt="SERVIN NET Logo">
+            <img src="../Images/Servin Net Logo_Principal.png" class="logo_principal" alt="SERVIN NET Logo">
         </section>
         <div class="container-form">
             <div class="container-login">
