--- a/public/views/ingreso_datos_3.html
+++ b/public/views/ingreso_datos_3.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agua producida</title>
-    <link rel="stylesheet" href="../../public/css/ingreso_datos.css">
+    <link rel="stylesheet" href="../css/ingreso_datos.css">
 </head>
     <body>
         <nav class="header-container">
             <div class="header-logo">
-                <img src="../../public/Images/Servin Net Logo_Principal.png" class="logo-header" alt="SERVIN NET Logo">
+                <img src="../Images/Servin Net Logo_Principal.png" class="logo-header" alt="SERVIN NET Logo">
             </div>
             <nav class="header-menu">
                 <ul>
