--- a/public/views/inicio/panel_de_control.html
+++ b/public/views/inicio/panel_de_control.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de control</title>
-    <link rel="stylesheet" href="../css/panel-control.css">
+    <link rel="stylesheet" href="../../css/panel-control.css">
 </head>
     <body>
         <nav class="header-container">
@@ -88,6 +88,6 @@
                     </div>
              </div>
         </nav>
-        <script src="../../public/js/dashboard.js"></script>
+        <script src="../../../public/js/dashboard.js"></script>
     </body>
 </html>
