--- a/public/views/menu/index.html
+++ b/public/views/menu/index.html
@@ -4,17 +4,17 @@
                 <img src="../Images/Servin Net Logo_Principal.png" class="logo-header" alt="SERVIN NET Logo">
             </div>
             
-    <ul>
-        <li><a href="#" data-section="panel_control" class="active">Panel de control</a></li>
-        <li><a href="#" data-section="informes_sui">Informes SUI</a></li>
-        <li><a href="#" data-section="ingreso_datos">Ingreso de datos</a></li>
+    <ul class="menu-navbar">
+        <li><a href="#" data-section="panel_control" class="active li-panel">Panel de control</a></li>
+        <li><a href="#" data-section="informes_sui" class="li-informe">Informes SUI</a></li>
+        <li><a href="#" data-section="ingreso_datos" class="li-datos">Ingreso de datos</a></li>
     </ul>
 
     <nav class="header-usuario">
-                <a>Usuario:</a>
-                <a>Empresas Públicas de Baraya ESP</a>
-                <a>NIT: 999.999.999</a>
-                <button class="btn btn-logout">Cerrar Sesión</button>
+                <span>Usuario:</span>
+                <span>Empresas Públicas de Baraya ESP</span>
+                <span>NIT: 999.999.999</span>
+                <button id="logout-btn" class="btn btn-logout">Cerrar Sesión</button>
             </nav>
         </nav>
 </nav>
