Menu administrador rutas ok

--- a/public/views/admin/desactivar/index.html
+++ b/public/views/admin/desactivar/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informe SUI</title>
-    <link rel="stylesheet" href="../css/informe_sui.css">
+    <title>Desactivar</title>
+    <link rel="stylesheet" href="../../../css/informe_sui.css">
 </head>
     <body>
       
         <nav class="content">
              <div class="content-principal">
                 <div class="content-title">
-                    <a>PLAN DE GESTIÓN Y RESULTADOS</a>
+                    <a>DESACTIVAR</a>
                 </div>
                 <div class="content-vigencia">
                     <select name="vigencia" class="select-vigencia" id="vigencia">
