--- a/public/views/cliente/panel_control/index.html
+++ b/public/views/cliente/panel_control/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panel de control</title>
-    <link rel="stylesheet" href="../../css/panel-control.css">
+    <link rel="stylesheet" href="../../../css/panel-control.css">
 </head>
     <body>
         
