--- a/public/css/ingreso_datos.css
+++ b/public/css/ingreso_datos.css
@@ -166,6 +166,13 @@
                     background-color: var(--tertiary-color);
                     color: #ffffff;
                 }
+
+        .select-variable{
+            padding: 6px;
+            font-size: 1rem;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        } 
         .select-content-periodo{
             display: flex;
             justify-content: center;
